# Process this file with autoconf to produce a configure script.
AC_INIT(SYCK, 0.01)

AC_PREREQ(2.50)

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(syck, 0.01)

# Checks for programs.
AC_PROG_AWK
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(alloca.h stdlib.h string.h)
AC_CHECK_SIZEOF(int, 4)
AC_CHECK_SIZEOF(long, 4)

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_VPRINTF

AC_CONFIG_FILES([Makefile 
                 lib/Makefile 
                 tests/Makefile])
AC_OUTPUT
